# minecraft-voxelizer

./: CMakeLists.txt  README.md
include/: bbox.h  bsdf.h  camera.h  hitinfo.h  image.h  light.h  parser.h  rand.h  ray.h  spectrum.h  vec3.h  voxel.h  voxelgrid.h  voxelizer.h
saved_builds/: complex.build  dog.build  dog2.build
src/: bbox.cpp  bsdf.cpp  camera.cpp  image.cpp  light.cpp  main.cpp  parser.cpp  rand.cpp  test.cpp  voxelgrid.cpp  voxelizer.cpp
